--- a/graphs/micro-time-thru.Rnw
+++ b/graphs/micro-time-thru.Rnw
@@ -22,11 +22,11 @@ p1 <- ggplot() +
     theme(legend.position="top") + 
     #scale_color_manual(name = "", values = c(true = "blue", windowed="red", raw="green")) +
     #scale_color_brewer(name="", aesthetics=c("colour"),palette="Paired", labels=c("Measured", "Measured (Windowed)", "Bottleneck")) + 
-    scale_color_manual(name="", labels=c(windowed="Measured", true="Bottleneck"), values=c(true="#2c7bb6", windowed="#d7191c")) +
+    scale_color_manual(name="", labels=c(windowed="Estimated", true="Actual"), values=c(true="#2c7bb6", windowed="#d7191c")) +
     scale_x_continuous(breaks=seq(0,max(thru$V1),by=1)) +
     scale_y_continuous(breaks=seq(0,108,by=12)) +
     xlab("Time (seconds)") + 
-    ylab("Rate (Mbps)") + 
+    ylab("Receive Rate (Mbps)") + 
     coord_cartesian(xlim=c(20,25), ylim=c(0,108)) + 
     theme(text = element_text(size=17))
 
@@ -77,7 +77,7 @@ p_thru <- ggplot(df_thru, aes(x,y)) + geom_line() +
     # Put origin at 0
     scale_y_continuous(expand=c(0,0), limits=c(0,.7)) +
     scale_fill_brewer(guide="none") +
-    xlab("Difference Between True and Measured Throughput (Mbps)") +
+    xlab("Difference Between Estimated and Actual Receive Rate (Mbps)") +
     ylab("PDF") +
     coord_cartesian(xlim=c(xmin_thru, xmax_thru)) +
     theme_minimal() + 
