--- a/packages.tex
+++ b/packages.tex
@@ -10,7 +10,7 @@
 \usepackage{balance}
 \usepackage{wrapfig}
 %
-%\usepackage[T1]{fontenc}
+\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 %\usepackage{mathptmx}
 \usepackage{mathtools}
@@ -69,9 +69,9 @@
 \newenvironment{knitrout}{}{} % an empty environment to be redefined in TeX
 \usepackage{alltt}
 %
-\captionsetup[table]{skip=-1pt,font={footnotesize}}
-\captionsetup[subfigure]{skip=-1pt,font={footnotesize}}
-\captionsetup[figure]{font={footnotesize}}
+%\captionsetup[table]{skip=-1pt,font={footnotesize}}
+%\captionsetup[subfigure]{skip=-1pt,font={footnotesize}}
+\captionsetup[figure]{font={small}}
 \Urlmuskip=0mu plus 1mu
 \hypersetup{%
   colorlinks=true,      % false: boxed links; true: colored links
@@ -111,12 +111,19 @@
 \newcommand{\etc}{{etc.}\xspace}
 \newcommand{\ie}{i.e., }
 %
-\newcommand{\an}[1]{{\color{teal}\bf AN: {#1}}}
-\newcommand{\hb}[1]{{\color{brown}\bf HB: {#1}}}
-\newcommand{\ma}[1]{{\color{purple}\bf MA: {#1}}}
-\newcommand{\pg}[1]{{\color{yellow}\bf PG: {#1}}}
-\newcommand{\fc}[1]{{\color{blue}\bf FC: {#1}}}
-\newcommand{\radhika}[1]{{\color{magenta}\bf [RM: {#1}]}}
-\newcommand{\reword}[1]{{\color{red}\emph {#1}}}
+%\newcommand{\an}[1]{{\color{teal}\bf AN: {#1}}}
+%\newcommand{\hb}[1]{{\color{brown}\bf HB: {#1}}}
+%\newcommand{\ma}[1]{{\color{purple}\bf MA: {#1}}}
+%\newcommand{\pg}[1]{{\color{yellow}\bf PG: {#1}}}
+%\newcommand{\fc}[1]{{\color{blue}\bf FC: {#1}}}
+%\newcommand{\radhika}[1]{{\color{magenta}\bf [RM: {#1}]}}
+%\newcommand{\reword}[1]{{\color{red}\emph {#1}}}
+\newcommand{\an}[1]{}
+\newcommand{\hb}[1]{}
+\newcommand{\ma}[1]{}
+\newcommand{\pg}[1]{}
+\newcommand{\fc}[1]{}
+\newcommand{\radhika}[1]{}
+\newcommand{\reword}[1]{}
 %
 \frenchspacing
