--- a/deployment.tex
+++ b/deployment.tex
@@ -1,20 +1,8 @@
 \section{\name's Utility Regime}
-
 \label{s:deploy}
 %\radhika{need a better title?}
 
-\begin{figure*}
-    \centering
-    \includegraphics[width=\textwidth]{img/deployment-arch.pdf}
-    \caption{An example deployment scenario for \name. 
-    The \inbox sits at the sending domain's egress and \outbox sits at the receiving domain's ingress. All traffic between the two boxes is aggregated into a single bundle. 
-    %Bottleneck links between the \inbox and the \outbox are shown in red.
-    %The solid lines depict links used by the traffic in the bundle, while the dotted lines represent other possible links. 
-    }\label{fig:deploy:arch}
-\end{figure*}
-
-
-Figure~\ref{fig:deploy:arch} \fc{ideally same page} provides an example scenario for deploying \name. The sending domain (depicted as a large content provider) deploys \name's \inbox at its egress to the public network, while the receiving domain (depicted as an enterprise network) deploys the \outbox at its ingress.\footnote{We use these specific examples of sending and receiving domains for simplicity of discussion. Similar arguments would also hold for other deployment scenarios (such as those exemplified in \S\ref{s:intro}).} All traffic between the \pair is aggregated into the same bundle.\footnote{We discuss different options for establishing pairing between a \inbox and a \outbox in \S\ref{s:discussion}} The \inbox moves the in-network queues built by the bundled traffic to itself (as described later in \S\ref{s:design}). It can thus enforce desired scheduling policies across the traffic in the bundle.
+Figure~\ref{fig:deploy:arch} provides an example scenario for deploying \name. The sending domain (depicted as a large content provider) deploys \name's \inbox at its egress to the public network, while the receiving domain (depicted as an enterprise network) deploys the \outbox at its ingress.\footnote{We use these specific examples of sending and receiving domains for simplicity of discussion. Similar arguments would also hold for other deployment scenarios (such as those exemplified in \S\ref{s:intro}).} All traffic between the \pair is aggregated into the same bundle.\footnote{We discuss different options for establishing pairing between a \inbox and a \outbox in \S\ref{s:discussion}} The \inbox moves the in-network queues built by the bundled traffic to itself (as described later in \S\ref{s:design}). It can thus enforce desired scheduling policies across the traffic in the bundle.
 %For the rest of this section, we use a running example of the sending domain belonging to and the receiving domain being an enterprise network. Similar arguments would hold for the other deployment scenarios (exemplified in \S\ref{s:intro}) as well. 
 The performance benefits that this provides are dictated by the following.
 
@@ -43,7 +31,8 @@ So the next question that arises is, does such in-network congestion occur in pr
 %Given the earlier observation that most of the traffic belongs to a few large content providers~\cite{fivecomps}, 
 We expect this to become common, \reword{as \name's popularity increases}. 
 
-\paragraphi{Congestion due to un-bundled cross-traffic} We now consider the scenario where the cross-traffic includes flows from domains that have not yet deployed a \name. If all such \emph{un-bundled} competing flows are short-lived (up to a few MBs), the bundled traffic still sees significant performance benefits. However, if the cross traffic includes a persistent backlogged flow that aggressively fills up any available buffer space at the bottleneck link, then, in order to compete fairly, \name would push more packets into the network (as described in \S\ref{s:impl:cc}), thus relinquishing its control over the bundled traffic and falling back to the status quo performance. Such flows are unlikely to arrive very frequently~\cite{caida-dataset}. 
+\paragraphi{Congestion due to un-bundled cross-traffic} We now consider the scenario where the cross-traffic includes flows from domains that have not yet deployed a \name. If all such \emph{un-bundled} competing flows are short-lived (up to a few MBs), the bundled traffic still sees significant performance benefits. 
+However, if the cross traffic includes a persistent backlogged flow that aggressively fills up any available buffer space at the bottleneck link, then, in order to compete fairly, \name would push more packets into the network (as described in \S\ref{s:impl:prototype}), thus relinquishing its control over the bundled traffic and falling back to the status quo performance. Such flows are unlikely to arrive very frequently~\cite{caida-dataset}. 
 %\fc{Is it okay to say all of this without saying why until later?}
 %some traffic distribution paper}.
 
