--- a/eval.tex
+++ b/eval.tex
@@ -154,21 +154,24 @@ We now use the web request distribution described in \S\ref{s:eval:setup} to gen
 
 \subsection{Terminating TCP Connections}\label{s:eval:proxy}
 
-We now study the benefits of combining \name with a TCP proxy. A TCP-proxy enables the the end-to-end congestion controller to observe a smaller RTT, by acknowledging its segments much faster than the original receiver further away. It therefore allows a rapid window growth.
-A proxy-based design could then apply a scheduling policy to the acknowledged, but yet unsent traffic from terminated connections.
+We now study the benefits of combining \name with a TCP proxy middlebox. A TCP-proxy enables the the end-to-end congestion controller to observe a smaller RTT, by acknowledging its segments much faster than the original receiver further away. This enables a rapid window growth at the enodhosts, causing packets to arrive at a faster rate at the middlebox. Combining \name with such a proxy would result in even greater scheduling opportunities. 
+
+To evaluate this, we emulate a TCP proxy by modifying the end-hosts to maintain a constant congestion window of $450$ packets --- slightly larger than the bandwidth-delay product in our setup --- and increase the buffering at the \inbox to hold these packets. The other aspects of \name remain unchanged, including its use of Copa to move the queues from the network, and its proper scheduling.
+The result is in Figure~\ref{fig:eval:proxy}. As expected, combining \name with TCP proxy produces even greater benefits, though primarily for large flows that benefit from the increased congestion window. 
+%For the short requests which never leave TCP slow start, terminating TCP connections does not yield additional benefits: with or without termination, they finish in a few RTTs.
+%A proxy-based design could then apply a scheduling policy to the acknowledged, but yet unsent traffic from terminated connections.
 
 
 
-An alternate implementation of a \name could terminate TCP connections at the \inbox. 
-%\radhika{I assume we mention this in an earlier section? else we need a line or two about why this experiment is interesting.}
-We consider the best-case outcome of terminating TCP connections --- the RTT the end-to-end congestion controller observed would decrease (since the proxy would acknowledge its segments much faster than the original receiver would), and it would therefore grow its window rapidly.
-A proxy-based design could then apply a scheduling policy to the acknowledged, but yet unsent traffic from terminated connections.
-To emulate a best-case scenario for termination, we modify the end-hosts to maintain a constant congestion window of $450$ packets --- slightly larger than the BDP --- and increase the buffering at the \inbox to hold these packets. 
-The other aspects of \name, including scheduling, remain unchanged.
-The result is in Figure~\ref{fig:eval:proxy}.
+% An alternate implementation of a \name could terminate TCP connections at the \inbox. 
+% %\radhika{I assume we mention this in an earlier section? else we need a line or two about why this experiment is interesting.}
+% We consider the best-case outcome of terminating TCP connections --- the RTT the end-to-end congestion controller observed would decrease (since the proxy would acknowledge its segments much faster than the original receiver would), and it would therefore grow its window rapidly.
+% A proxy-based design could then apply a scheduling policy to the acknowledged, but yet unsent traffic from terminated connections.
+% To emulate a best-case scenario for termination, we modify the end-hosts to maintain a constant congestion window of $450$ packets --- slightly larger than the BDP --- and increase the buffering at the \inbox to hold these packets. 
+% The other aspects of \name, including scheduling, remain unchanged.
+% The result is in Figure~\ref{fig:eval:proxy}.
 %
 \input{proxy}
 %
-\an{check this text}
-For the short requests which never leave TCP slow start, terminating TCP connections does not yield additional benefits: with or without termination, they finish in a few RTTs.
-For medium-to-long requests, terminating TCP connections yields benefits since they no longer incur the penalty of window growth.
+%For the short requests which never leave TCP slow start, terminating TCP connections does not yield additional benefits: with or without termination, they finish in a few RTTs.
+%For medium-to-long requests, terminating TCP connections yields benefits since they no longer incur the penalty of window growth.
