--- a/intro.tex
+++ b/intro.tex
@@ -33,28 +33,40 @@ To reduce a content provider's dependence on the ISPs with respect to how its tr
 %(as described in \S\fc{X}). 
 The natural question that arises is, how can the queues be ``moved''? This is the primary focus of our work. 
 
-We observe that the \emph{component flows} of the traffic from a given sender's domain, destined for the same downstream domain are likely to share common bottlenecks within the network. Examples include traffic between a large content provider (\eg Amazon, Google, etc.) and a network with many clients (e.g. an enterprise), between two different campuses of an organization, between collaborating institutes, and so on. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
+We observe that the \emph{component flows} of the traffic from a given sender's domain, destined for the same downstream domain are likely to share common bottlenecks within the network, as in Figure~\ref{fig:deploy:arch}. Examples include traffic between a large content provider (\eg Amazon, Google, etc.) and a network with many clients (e.g. an enterprise), between two different campuses of an organization, between collaborating institutes, and so on. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
 %\radhika{is the last sentence too long / hard to understand? suggestions for fixing it?} 
+\begin{figure*}[t]
+    \centering
+    \includegraphics[width=\textwidth]{img/deployment-arch.pdf}
+    \caption{An example deployment scenario for \name. 
+    The \inbox sits at the sending domain's egress and \outbox sits at the receiving domain's ingress. All traffic between the two boxes is aggregated into a single bundle. 
+    %Bottleneck links between the \inbox and the \outbox are shown in red.
+    %The solid lines depict links used by the traffic in the bundle, while the dotted lines represent other possible links. 
+    }\label{fig:deploy:arch}
+\end{figure*}
 
 %We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of a network domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They thus provide an effective vantage point for aggregating and managing traffic. 
 We propose a new type of middlebox, called \name, that (1) aggregates the traffic at content provider's egress into appropriate bundles, (2) does rate control for each bundle to shift the corresponding queues from within the network to itself, and (3) applies scheduling and AQM policies within each bundle. 
 
 %\radhika{add a few lines on \name's high level architecture.} 
 %\fc{is it not bad to bring up the two-box design here if we don't justify it until later?}
- \name is made up of a pair of middleboxes: a \emph{\inbox} that sits at the sender's egress and a \emph{\outbox} that sits at the receiver's ingress. A \emph{bundle} is a group of flows traversing through the same \inbox{}-\outbox{} pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to measure congestion signals, such as the round-trip time, and the rate at which packets are received. These signals are used by a congestion control algorithm (with certain properties described in \S\ref{s:design}) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is low and is incurred at the \inbox instead, while ensuring that the bottleneck link on the path remains fully utilized. 
+\name is made up of a pair of middleboxes: a \emph{\inbox} that sits at the sender's egress and a \emph{\outbox} that sits at the receiver's ingress. A \emph{bundle} is a group of flows traversing through the same \inbox{}-\outbox{} pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to measure congestion signals, such as the round-trip time, and the rate at which packets are received. These signals are used by a congestion control algorithm (with certain properties described in \S\ref{s:design}) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is low and is incurred at the \inbox instead, while ensuring that the bottleneck link on the path remains fully utilized. 
  
- We introduce a lightweight method for the coordination between the \inbox and the \outbox, which does not require any per-flow state, nor any modifications to the packets traversing the \name boxes. Our approach only requires introducing the \name boxes at the content provider's edge, and requires no changes to the end hosts or to the routers in the network. 
+We introduce a lightweight method for the coordination between the \inbox and the \outbox, which does not require any per-flow state, nor any modifications to the packets traversing the \name boxes. Our approach only requires introducing the \name boxes at the content provider's edge, and requires no changes to the end hosts or to the routers in the network. 
  
- Note that our goal is to perform scheduling and queue management only on the traffic within the same bundle. We do not attempt to control traffic across different bundles. Furthermore, as we will discuss later, there may be instances where \name does not improve performance for the bundled traffic, and falls back to the status quo performance. Despite these limitations, we believe that our work, provides a deployable solution for enabling some of the benefits of scheduling and queue management in the Internet from the edge of the content provider's network.
+Note that our goal is to perform scheduling and queue management only on the traffic within the same bundle. We do not attempt to control traffic across different bundles. Furthermore, as we will discuss in \S\ref{s:deploy}, there may be instances where \name does not improve performance for the bundled traffic, and falls back to the status quo performance. Despite these limitations, we believe that our work, provides a deployable solution for enabling some of the benefits of scheduling and queue management in the Internet from the edge of the content provider's network.
  
- \fc{list contributions}
- %\radhika{should i move it up by 2 paragraphs (i.e. right after the 3 points)?} 
+We make the following contributions:
+\begin{enumerate}
+     \item A light-weight, scalable and deployable design of \name that does congestion control on aggregated traffic to move queues to the content provider's edge (\S\ref{s:design}).  
+     \item A novel low-overhead protocol-agnostic technique for measuring signals for congestion control between the \pair, that does not make any changes to the packet headers (\S\ref{s:measurement}). 
+     \item A prototype implementation of \name (\S\ref{s:impl}) that runs on Linux without modifications and plugs in with existing Linux queueing disciplines.
+     \item Evaluation of our prototype implementation on a wide variety of emulated scenarios (\S\ref{s:eval}).
+     %\item The design and implementation of a \name, including a novel method of collecting congestion control information and enforcing the decisions of a rate control algorithm on traffic aggregates, which \emph{moves} the queues from the bottleneck in the network to the customer's edge.
+     \item An evaluation of the benefits of scheduling and queue management for traffic aggregates, compared to both the status quo (FIFO) and an idealized deployment where bottleneck queues deploy the desired policy.
+ \end{enumerate}
 
-% We make the following key contributions:
-% \begin{enumerate}
-%     \item The design and implementation of a \name, including a novel method of collecting congestion control information and enforcing the decisions of a rate control algorithm on traffic aggregates, which \emph{moves} the queues from the bottleneck in the network to the customer's edge.
-%     \item An evaluation of the benefits of scheduling and queue management for traffic aggregates, compared to both the status quo (FIFO) and an idealized deployment where bottleneck queues deploy the desired policy.
-% \end{enumerate}
+ %\radhika{should i move it up by 2 paragraphs (i.e. right after the 3 points)?} 
 
 %The rest of the paper dives into the details of how we design, implement and evaluate \name, and is organized as follows:
 %We begin the rest of this paper by discussing some related work in \S\ref{s:related}. We then discuss our design choices, along with the favorable operation regime for \name in \S\ref{s:design}. We detail our novel \inbox and \outbox coordination methodology for collecting congestion signals in \S\ref{s:measurement}, and describe our prototype implementation in \S\ref{s:impl}. 
@@ -132,6 +144,7 @@ The rest of this paper is organized as follows:
 \S\ref{s:impl} describes our prototype implementation. 
 \S\ref{s:eval} shows an evaluation of the benefits of \name.
 
+
 }
 \cut{
 \begin{outline}
@@ -143,4 +156,3 @@ The rest of this paper is organized as follows:
         \3 end-to-end principle
 \end{outline}
 }
-
