--- a/micro-time-delay.tex
+++ b/micro-time-delay.tex
@@ -6,6 +6,6 @@
 
 \end{knitrout}
 
-    \caption{\name's estimate of the delay }
+    \caption{A representative example of the difference between \name's estimates and the actual values over a five second snapshot from one of the experiments in our evaluation. \name's estimates closely track the actual values over time, showing \name's ability to quickly observe changing network conditions. }
     \label{fig:micro:time-delay}
 \end{figure}
