--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -1,4 +1,4 @@
-\documentclass[format=sigconf,10pt,natbib=false,top=1in,bottom=0.8in]{acmart}
+\documentclass[format=sigconf,10pt,natbib=false]{acmart}
 \usepackage{geometry}
 \usepackage{algorithm}
 \usepackage{algorithmic}
@@ -42,6 +42,7 @@
 \input{impl}
 \input{eval}
 \input{discussion}
+\vspace{-3pt}
 \input{conclusion}
 \end{sloppypar}
 \label{p:end}
