--- a/intro.tex
+++ b/intro.tex
@@ -21,9 +21,9 @@
 The vast literature on scheduling and queue management policies~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} has demonstrated their benefits.
 On many Internet paths, however, content providers and end users have been unable to enjoy these benefits.
 
-Internet content providers may desire such policies for their traffic. For example, a video streaming company might benefit from weighted fair queueing across its video traffic to its many different users sharing a bottleneck, and web sites might want to prioritize  interactive web traffic (e.g., e-commerce) over the bulk file transfers. However, such policies are effective only when enforced on bottleneck links that experience a queue build-up, and such links are often outside the control of individual content~\cite{inferring-interdomain-congestion, isp-throttle-1, isp-throttle-2, isp-throttle-3}. Content providers are therefore unable apply desired policies to their traffic in such settings. 
+Internet content providers may desire such policies for their traffic. For example, a video streaming company might benefit from weighted fair queueing across its video traffic to its many different users sharing a bottleneck, and web sites might want to prioritize  interactive web traffic (e.g., e-commerce) over the bulk file transfers. However, such policies are effective only when enforced on bottleneck links that experience a queue build-up, and such links are often outside the control of individual content~\cite{inferring-interdomain-congestion, isp-throttle-1, isp-throttle-2, isp-throttle-3}. Content providers are therefore unable to apply desired policies to their traffic in such settings. 
 
-ISPs, on the other hand, do control the bottleneck links in their carrier networks to enforce different scheduling and queue management policies. However, they neither have enough visibility into their customer's traffic to choose desired policies, nor enough incentives to enforce them.\footnote{The case for private WANs is different, since they are owned by a single entity, and have, thus, been successful in exploiting the benefits of scheduling~\cite{swan, b4, bwe}. Our focus is public networks.} Large customers might be able to negotiate deals with certain carriers to enforce specific policies~\cite{att-qos}. However, it might not be possible to negotiate such deals with \emph{all} carriers in the traffic's path, and content providers may wish to keep their policies confidential from downstream ISPs.
+ISPs, on the other hand, do control the bottleneck links in their carrier networks to enforce different scheduling and queue management policies. However, they neither have enough visibility into their customers' traffic to choose desired policies, nor enough incentives to enforce them.\footnote{The case for private WANs is different, since they are owned by a single entity, and have, thus, been successful in exploiting the benefits of scheduling~\cite{swan, b4, bwe}. Our focus is public networks.} Large customers might be able to negotiate deals with certain carriers to enforce specific policies~\cite{att-qos}. However, it might not be possible to negotiate such deals with \emph{all} carriers in the traffic's path, and content providers may wish to keep their policies confidential from downstream ISPs.
 %(especially a small last-mile carrier that is likely to be the bottleneck, and that may not even possess switches equipped with required features). 
 %Even if this was somehow made possible, the customers would have no way of knowing whether their policies were enforced as desired, and they would be left at the mercy of these individual ISPs.
 %, they have no way of knowing whether it was done appropriately. 
@@ -33,24 +33,24 @@ To reduce a content provider's dependence on the ISPs with respect to how its tr
 %(as described in \S\fc{X}). 
 The natural question that arises is, how can the queues be ``moved''? This is the primary focus of our work. 
 
-We observe that the \emph{component flows} of the traffic from a given sender's domain, destined for the same downstream domain are likely to share common bottlenecks within the network, as in Figure~\ref{fig:deploy:arch}. Examples include traffic between a large content provider (\eg Amazon, Google, etc.) and a network with many clients (e.g. an enterprise), between two different campuses of an organization, between collaborating institutes, and so on. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
+We observe that the \emph{component flows} in traffic from a given sender's domain, destined for the same downstream domain, are likely to share common bottlenecks within the network, as in Figure~\ref{fig:deploy:arch}. Examples include large amounts of traffic between a content provider (\eg Amazon, Google, etc.) and a network with many clients (e.g. an enterprise), between two different campuses of an organization, between collaborating institutes, and so on. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
 %\radhika{is the last sentence too long / hard to understand? suggestions for fixing it?} 
 \begin{figure*}[t]
     \centering
     \includegraphics[width=\textwidth]{img/deployment-arch.pdf}
     \caption{An example deployment scenario for \name. 
-    The \inbox sits at the sending domain's egress and \outbox sits at the receiving domain's ingress. All traffic between the two boxes is aggregated into a single bundle. 
+    The \inbox sits at the sending domain's egress and \outbox sits at the receiving domain's ingress. All traffic between the two boxes is aggregated into a single bundle. The \inbox schedules the traffic within the bundle according to the policy the sending domain specifies (\S\ref{s:design}).
     %Bottleneck links between the \inbox and the \outbox are shown in red.
     %The solid lines depict links used by the traffic in the bundle, while the dotted lines represent other possible links. 
     }\label{fig:deploy:arch}
 \end{figure*}
 
 %We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of a network domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They thus provide an effective vantage point for aggregating and managing traffic. 
-We propose a new type of middlebox, called \name, that (1) aggregates the traffic at content provider's egress into appropriate bundles, (2) does rate control for each bundle to shift the corresponding queues from within the network to itself, and (3) applies scheduling and AQM policies within each bundle. 
+We propose a new type of middlebox, called \name, that (1) aggregates the traffic at \reword{the content provider's} egress into appropriate bundles, (2) does rate control for each bundle to move the corresponding queues from within the network to itself, and (3) applies scheduling and AQM policies within each bundle. 
 
 %\radhika{add a few lines on \name's high level architecture.} 
 %\fc{is it not bad to bring up the two-box design here if we don't justify it until later?}
-\name is made up of a pair of middleboxes: a \emph{\inbox} that sits at the sender's egress and a \emph{\outbox} that sits at the receiver's ingress. A \emph{bundle} is a group of flows traversing through the same \inbox{}-\outbox{} pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to measure congestion signals, such as the round-trip time, and the rate at which packets are received. These signals are used by a congestion control algorithm (with certain properties described in \S\ref{s:design}) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is low and is incurred at the \inbox instead, while ensuring that the bottleneck link on the path remains fully utilized. 
+\name is made up of a pair of middleboxes: a \emph{\inbox} that sits at the sender's egress and a \emph{\outbox} that sits at the receiver's ingress. A \emph{bundle} is a group of flows traversing the same \inbox{}-\outbox{} pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to measure congestion signals, such as the round-trip time, and the rate at which packets are received. These signals are used by a congestion control algorithm (requiring certain properties described in \S\ref{s:design}) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is low and is incurred at the \inbox instead, while ensuring that the bottleneck link on the path remains fully utilized. 
  
 We introduce a lightweight method for the coordination between the \inbox and the \outbox, which does not require any per-flow state, nor any modifications to the packets traversing the \name boxes. Our approach only requires introducing the \name boxes at the content provider's edge, and requires no changes to the end hosts or to the routers in the network. 
  
@@ -59,11 +59,12 @@ Note that our goal is to perform scheduling and queue management only on the tra
 We make the following contributions:
 \begin{enumerate}
      \item A light-weight, scalable and deployable design of \name that does congestion control on aggregated traffic to move queues to the content provider's edge (\S\ref{s:design}).  
-     \item A novel low-overhead protocol-agnostic technique for measuring signals for congestion control between the \pair, that does not make any changes to the packet headers (\S\ref{s:measurement}). 
-     \item A prototype implementation of \name (\S\ref{s:impl}) that runs on Linux without modifications and plugs in with existing Linux queueing disciplines.
-     \item Evaluation of our prototype implementation on a wide variety of emulated scenarios (\S\ref{s:eval}).
+     \item A novel low-overhead protocol-agnostic technique for measuring signals for congestion control between the \pair, that does not make any changes to the packet headers (\S\ref{s:measurement}). We evaluate our measurement strategy across a variety of RTTs and link bandwidths in \S\ref{s:measure:microbench}. 
+     \item A prototype implementation of \name (\S\ref{s:impl}).
+     \item Evaluation of our prototype implementation on a wide variety of emulated scenarios with a demonstration of performance benefits achieved from scheduling traffic via \name (\S\ref{s:eval}).
+     In a scenario with self-inflicted scheduling overhead, \name achieves 33\% lower median slowdown.
      %\item The design and implementation of a \name, including a novel method of collecting congestion control information and enforcing the decisions of a rate control algorithm on traffic aggregates, which \emph{moves} the queues from the bottleneck in the network to the customer's edge.
-     \item An evaluation of the benefits of scheduling and queue management for traffic aggregates, compared to both the status quo (FIFO) and an idealized deployment where bottleneck queues deploy the desired policy.
+     %\item An evaluation of the benefits of scheduling and queue management for traffic aggregates, compared to both the status quo (FIFO) and an idealized deployment where bottleneck queues deploy the desired policy.
  \end{enumerate}
 
  %\radhika{should i move it up by 2 paragraphs (i.e. right after the 3 points)?} 
