--- a/packages.tex
+++ b/packages.tex
@@ -117,13 +117,13 @@
 %\newcommand{\pg}[1]{{\color{yellow}\bf PG: {#1}}}
 %\newcommand{\fc}[1]{{\color{blue}\bf FC: {#1}}}
 %\newcommand{\radhika}[1]{{\color{magenta}\bf [RM: {#1}]}}
-%\newcommand{\reword}[1]{{\color{red}\emph {#1}}}
+\newcommand{\reword}[1]{{\color{red}\emph {#1}}}
 \newcommand{\an}[1]{}
 \newcommand{\hb}[1]{}
 \newcommand{\ma}[1]{}
 \newcommand{\pg}[1]{}
 \newcommand{\fc}[1]{}
 \newcommand{\radhika}[1]{}
-\newcommand{\reword}[1]{}
+%\newcommand{\reword}[1]{#1}
 %
 \frenchspacing
