--- a/ref.bib
+++ b/ref.bib
@@ -1655,6 +1655,7 @@ title = {A Secure Environment for Untrusted Helper Applications (Confining the W
 }
 
 @misc{att-qos,
+    author = {AT\&T},
     title = {{Which VPN? Applications for IPsec and MPLS}},
     howpublished = {\url{https://www.business.att.com/content/dam/attbusiness/briefs/vpn-applications-product-brief.pdf}},
     year = {2016}
@@ -1682,24 +1683,28 @@ year = {2016},
 } 
 
 @misc{labovitz,
+    author = {Craig Lagovitz},
     title = {{Internet Inter-Domain Traffic}},
     howpublished = {\url{https://conferences.sigcomm.org/sigcomm/2010/slides/S3Labovitz.pdf}},
     year = {2010}
 }
 
 @misc{isp-throttle-1,
+    author = {Caroline Craig},
     title = {{ISPs do throttle traffic -- and the FCC can't stop it}},
     howpublished = {\url{https://www.infoworld.com/article/2940538/internet/isps-do-throttle-traffic-and-the-fcc-cant-stop-it.html}},
     year = {2015}
 }
 
 @misc{isp-throttle-2,
+    author = {Paul Lilly},
     title = {{Research Study Proves ISPs Are Throttling Streaming Services Post Net Neutrality}},
     howpublished = {\url{https://hothardware.com/news/research-study-isps-throttling-streaming-services-post-net-neutrality}},
     year = {2018}
 }
 
 @misc{isp-throttle-3,
+    author = {PureVPN},
     title = {{ISP Bandwidth Throttling Explained}},
     howpublished = {\url{https://www.purevpn.com/blog/isp-bandwidth-throttling-explained/}},
     year = {2017}
