--- a/related.tex
+++ b/related.tex
@@ -10,11 +10,11 @@ Our work is at the intersection of congestion control, scheduling, and middlebox
 This observation implies that we can expect to have a small number of bundles across the Internet, each with large amounts of traffic, resulting in greater scheduling opportunities within a bundle. Note that the proposal uses its observation to highlight the benefits of sharing information across a given customer's traffic when configuring congestion control algorithms at the endhosts. This is orthogonal to our goal of scheduling such traffic by introducing a middlebox without modifying end hosts.
 
 
-\Para{Packet scheduling} There have been some recent efforts towards enabling the benefits of packet scheduling. PIFO~\cite{pifo} is a programmable priority queue that can be configured to express different scheduling policies at routers. However, not only does it changing the in-network routers, but it also suffers from the issue of an ISP's limited visibility into the traffic to choose desired policies (and limited incentives to enforce them). UPS~\cite{ups} allows different scheduling policies to be expressed from the edge via header initialization, but also requires a change to the routers.
+\Para{Packet scheduling} There have been some recent efforts towards enabling the benefits of packet scheduling. PIFO~\cite{pifo} is a programmable priority queue that can be configured to express different scheduling policies at routers. However, not only does it require changing the in-network routers, but it also suffers from the issue of an ISP's limited visibility into the traffic to choose desired policies (and limited incentives to enforce them). UPS~\cite{ups} allows different scheduling policies to be expressed from the edge via header initialization, but also requires a change to the routers.
 %However, since queuing still occurs in the middle of the network, it relies on the customers targeting a common global objective, or on the network operators isolating different customers' traffic, both of which are difficult to realize. 
 \name provides a solution that does not require any cooperation from downstream networks in other organizations.
 
-In that spirit, \name is closer to OverQoS~\cite{overqos}. Proposed more than a decade ago, OverQoS aimed to provide QoS benefits in the Internet by aggregating and managing traffic at the nodes of an overlay network~\cite{ron}. Given the aggregation opportunities today, where a few content providers generate majority of the Internet traffic~\cite{fivecomps}, we observe that the time for reaping benefits from such designs may have arrived. Recent trends enable a simpler and more deployable approach; instead of deploying an overlay network, \name{} proposes deploying a middlebox at the sending and the receiving domains to aggregate sufficient traffic. In addition, \name provides a novel mechanism to \emph{move} the in-network queues, and gain the power to schedule the bundled traffic. 
+In that spirit, \name is closer to OverQoS~\cite{overqos}. Proposed more than a decade ago, OverQoS aimed to provide QoS benefits in the Internet by aggregating and managing traffic at the nodes of an overlay network~\cite{ron}. Given the aggregation opportunities today, where a few content providers generate a majority of the Internet traffic~\cite{fivecomps}, we observe that the time for reaping benefits from such designs may have arrived. Recent trends enable a simpler and more deployable approach; instead of deploying an overlay network, \name{} proposes deploying a middlebox at the sending and the receiving domains to aggregate sufficient traffic. In addition, \name provides a novel mechanism to \emph{move} the in-network queues, and gain the power to schedule the bundled traffic. 
 
 
 %\Para{Overlays} OverQoS~\cite{overqos} proposed an extension to overlay-based network architectures~\cite{ron} to deploy QoS independently of endhosts, a mechanism for packet scheduling.
