--- a/micro-time-delay.tex
+++ b/micro-time-delay.tex
@@ -6,6 +6,6 @@
 
 \end{knitrout}
 
-    \caption{A representative example of the difference between \name's estimates and the actual values over a five second snapshot from one of the experiments in our evaluation. \name's estimates closely track the actual values over time, showing \name's ability to quickly observe changing network conditions. }
+    \caption{The distribution of the error of \name's measurements across a range of network conditions. The vast majority of \name's estimates are within a small fraction of the actual value. The dashed lines show the 10th, 50th, and 90th percentile, and the edges of the plot contain the 1st and 99th percentiles.}
     \label{fig:micro:time-delay}
 \end{figure}
